// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JSON schema creation with abstract types json schema creation 1`] = `
{
  "properties": {
    "data": {
      "properties": {
        "u": {
          "properties": {},
          "type": [
            "object",
            "null",
          ],
        },
      },
      "type": [
        "object",
        "null",
      ],
    },
    "errors": {
      "items": {
        "additionalProperties": true,
        "properties": {
          "locations": {
            "items": {
              "properties": {
                "column": {
                  "type": "number",
                },
                "line": {
                  "type": "number",
                },
              },
              "type": "object",
            },
            "type": "array",
          },
          "message": {
            "type": "string",
          },
          "path": {
            "items": {
              "type": [
                "string",
                "number",
              ],
            },
            "type": "array",
          },
        },
        "type": "object",
      },
      "type": "array",
    },
  },
  "type": "object",
}
`;

exports[`json schema creator json schema creation 1`] = `
{
  "properties": {
    "data": {
      "properties": {
        "article": {
          "properties": {
            "author": {
              "properties": {
                "id": {
                  "type": "string",
                },
                "name": {
                  "type": [
                    "string",
                    "null",
                  ],
                },
                "pic": {
                  "properties": {
                    "height": {
                      "type": [
                        "integer",
                        "null",
                      ],
                    },
                    "url": {
                      "type": [
                        "string",
                        "null",
                      ],
                    },
                    "width": {
                      "type": [
                        "integer",
                        "null",
                      ],
                    },
                  },
                  "type": [
                    "object",
                    "null",
                  ],
                },
                "recentArticle": {
                  "properties": {
                    "body": {
                      "type": [
                        "string",
                        "null",
                      ],
                    },
                    "id": {
                      "type": "string",
                    },
                    "isPublished": {
                      "type": [
                        "boolean",
                        "null",
                      ],
                    },
                    "title": {
                      "type": [
                        "string",
                        "null",
                      ],
                    },
                  },
                  "type": [
                    "object",
                    "null",
                  ],
                },
              },
              "type": "object",
            },
            "body": {
              "type": [
                "string",
                "null",
              ],
            },
            "id": {
              "type": "string",
            },
            "isPublished": {
              "type": [
                "boolean",
                "null",
              ],
            },
            "title": {
              "type": [
                "string",
                "null",
              ],
            },
          },
          "type": [
            "object",
            "null",
          ],
        },
        "feed": {
          "items": {
            "properties": {
              "id": {
                "type": "string",
              },
              "title": {
                "type": [
                  "string",
                  "null",
                ],
              },
            },
            "type": [
              "object",
              "null",
            ],
          },
          "type": [
            "array",
            "null",
          ],
        },
      },
      "type": [
        "object",
        "null",
      ],
    },
    "errors": {
      "items": {
        "additionalProperties": true,
        "properties": {
          "locations": {
            "items": {
              "properties": {
                "column": {
                  "type": "number",
                },
                "line": {
                  "type": "number",
                },
              },
              "type": "object",
            },
            "type": "array",
          },
          "message": {
            "type": "string",
          },
          "path": {
            "items": {
              "type": [
                "string",
                "number",
              ],
            },
            "type": "array",
          },
        },
        "type": "object",
      },
      "type": "array",
    },
  },
  "type": "object",
}
`;
